# alfred-anemia

./: .gitignore  CLAUDE.md  README.md  anemia_flow.py  bootstrap.md  info.plist  pyproject.toml  regenerate_plist.py  run_diagnosis.py  貧血の鑑別診断フローチャート.md
.github/workflows/: release.yml
doc/: MARKDOWN_PREVIEW.md  SPEC.md  design_doc.md  instructions.md
examples/: example_usage.sh
scripts/: preview_md.sh
src/: main.py
tests/: test_anemia.py  test_anemia_flow.py  test_main.py
